update security generation with tmap